# Croissant-TOML

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  __init__.py  check_quality.sh  cli.py  converter.py  croissant-toml-mvp.md  generator.py  main.py  parser.py  pyproject.toml  pytest.ini  requirements.txt  sample.json  schema.json  setup.py  test_mvp.py  validator.py
.github/workflows/: ci.yml
croissant_toml/: README.md  __init__.py  cli.py  converter.py  generator.py  parser.py  schema.json  validator.py
docs/: script.py  script_1.py  script_10.py  script_11.py  script_12.py  script_2.py  script_3.py  script_4.py  script_5.py  script_6.py  script_7.py  script_8.py  script_9.py
tests/: __init__.py  test_basic.py
tests/integration/: __init__.py
